# mara-schema

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: build.yaml
docs/: api.rst  artifact-generation.rst  conf.py  config.rst  design.rst  example.rst  example_schema.sql  index.rst  installation.rst  license.rst  requirements.txt
examples/: data_sets.py
mara_schema/: __init__.py  attribute.py  cli.py  config.py  data_set.py  entity.py  graph.py  metric.py  mondrian_schema_generation.py  schema.py  sql_generation.py  views.py
mara_schema/example/: __init__.py  dimensional-schema.sql
mara_schema/example/data_sets/: customers.py  order_items.py  products.py
mara_schema/example/entities/: customer.py  order.py  order_item.py  product.py  product_category.py
mara_schema/ui/: graph.py  views.py
mara_schema/ui/static/: data-set-sql-query.js  mara-schema.css
tests/: conftest.py  test_sql_generation.py
