[metadata]
name = mara-schema
version = attr: mara_schema.__version__
url = https://github.com/mara/mara-schema
description = Mapping of DWH database tables to business entities, attributes & metrics in Python, with automatic creation of flattened tables
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_schema
python_requires = >= 3.8
install_requires =
    flask
    graphviz
    mara-page
    sqlalchemy

[options.package_data]
mara_schema = **/*.py, ui/static/**/*, example/**/*.sql
